--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -21,7 +21,7 @@ jobs:
     - name: Repository Dispatch
       uses: peter-evans/repository-dispatch@v2
       with:
-        token: ${{ secrets.MY_SRC_PAT }}
+        token: ${{ secrets.MANU_PAT }}
         repository: manu6300/githuaction
         event-type: my-event
         client-payload: '{"ref": "${{ github.ref }}", "sha": "${{ github.sha }}"}'
