--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -24,4 +24,4 @@ jobs:
         token: ${{ secrets.MANU_PAT }}
         repository: manu6300/githuaction
         event-type: my-event
-        client-payload: '{"branch": "${{ github.ref }}", "sha": "${{ github.sha }}"}'
+        client-payload: '{"branch": "${{ ref_name }}", "sha": "${{ github.sha }}"}'
